--- a/app/views/tops/show.html.slim
+++ b/app/views/tops/show.html.slim
@@ -1,5 +1,3 @@
-/ = google_url("xxx")
-
 .page-header
   h3= "フォーム"
 = LuckyBeast.to_html(self)
@@ -7,3 +5,7 @@
 .page-header
   h3= "JavaScript"
 = CodeArticle.to_html(self)
+
+.page-header
+  h3= "CSS"
+= StyleArticle.to_html(self)
