--- a/app/views/code_articles/show.html.slim
+++ b/app/views/code_articles/show.html.slim
@@ -1,21 +1,23 @@
 ruby:
-  code_article = CodeArticle[params[:id]]
+  single = controller.controller_path.singularize
+  model = controller.controller_path.singularize.classify.constantize
+  record = model[params[:id]]
 
 .row
   .col-md-2.visible-md.visible-lg
     ul.pager
-      li=<> link_to("前", [:code_article, id: code_article.previous_info.key])
-      li=<> link_to("次に進む", [:code_article, id: code_article.next_info.key])
+      li=<> link_to("前", [single, id: record.previous_info.key])
+      li=<> link_to("次に進む", [single, id: record.next_info.key])
     .list-group
-      - CodeArticle.each do |e|
-        = link_to(e.name, [:code_article, id: e.key], class: ["list-group-item", ("active" if e == code_article)])
+      - model.each do |e|
+        = link_to(e.name, [single, id: e.key], class: ["list-group-item", ("active" if e == record)])
 
   .col-md-10
     .page-header
-      h2= code_article.name
+      h2= record.name
     .row
       .col-md-6
-        = render code_article.key.to_s
+        = render record.key.to_s
       .col-md-6.visible-md.visible-lg
         #template_nav_tabs
           ul.nav.nav-tabs
@@ -26,17 +28,17 @@ ruby:
             li :class="{active: m == 'simple'}"
               a @click="m = 'simple'" simple
           template v-if="m == 'slim'"
-            pre v-pre="" = code_article.partial_file.read
+            pre v-pre="" = record.partial_file.read
           template v-else-if="m == 'html'"
-            div v-pre="" == code_article.to_pretty_html rescue content_tag(:pre, $!, class: "text-danger")
+            div v-pre="" == record.to_pretty_html rescue content_tag(:pre, $!, class: "text-danger")
           template v-else=""
-            div v-pre="" == code_article.to_simple_html rescue content_tag(:pre, $!, class: "text-danger")
+            div v-pre="" == record.to_simple_html rescue content_tag(:pre, $!, class: "text-danger")
 
-        - if code_article.point.present?
+        - if record.point.present?
           .label.label-info= "Point"
           .panel.panel-info
             .panel-body
-              = code_article.point
+              = record.point
 
 javascript:
   new Vue({el: "#template_nav_tabs", data: {m: "slim"}})
