--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,7 +6,7 @@ html lang="ja"
     = favicon_link_tag
     = csrf_meta_tag
     meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    title= content_for?(:title) ? yield(:title) : "FormTemplate"
+    title= content_for?(:title) ? yield(:title) : "RailsPlayground"
     = action_cable_meta_tag
 
     = javascript_include_tag "application"
