--- a/app/views/code_articles/_25b38ccd6aa787e5ac97d5a64ccaaf5d.html.slim
+++ b/app/views/code_articles/_25b38ccd6aa787e5ac97d5a64ccaaf5d.html.slim
@@ -1,4 +1,4 @@
-script src=="//maps.googleapis.com/maps/api/js?key=#{AppConfig[:google_maps_api_key]}"
+script src=="//maps.googleapis.com/maps/api/js?key=#{Rails.application.credentials.google_maps_api_key}"
 #app
   .form-horizontal
     .form-group
