[fix] params.to_h が動かない

--- a/app/views/name_space1/type004_articles/_crud_debug.html.slim
+++ b/app/views/name_space1/type004_articles/_crud_debug.html.slim
@@ -1,5 +1,5 @@
 - if Rails.env.development?
-  = params.to_h.to_html(title: "params の内容")
+  = params.to_unsafe_h.to_html(title: "params の内容")
   - if respond_to?(:current_record)
     = current_record.attributes.to_html(title: "オブジェクトの内容")
     = session[current_single_key].to_h.to_html(title: "セッションに保存したフォーム内容")
