--- a/app/views/name_space1/type019_homes/show.html.slim
+++ b/app/views/name_space1/type019_homes/show.html.slim
@@ -3,4 +3,4 @@
     = "#{current_type019_user}のホーム"
 
 ul.nav.nav-pills
-  li= link_to("ログアウト", [:name_space1, :type019_home, logout: "true"])
+  li= link_to("ログアウト", [*ns_prefix, :type019_home, logout: "true"])
