--- a/app/views/tops/show.html.slim
+++ b/app/views/tops/show.html.slim
@@ -1,7 +1,7 @@
 .page-header
   h3= "フォーム"
-= LuckyBeast.to_html(self)
+= RbCodeArticle.to_html(self)
 
 .page-header
   h3= "JavaScript"
-= CodeArticle.to_html(self)
+= JsCodeArticle.to_html(self)
