--- a/app/views/name_space1/type010_articles/edit.html.slim
+++ b/app/views/name_space1/type010_articles/edit.html.slim
@@ -4,7 +4,7 @@
   .page-header
     h2= current_record.new_record? ? "新規登録" : "編集"
 
-  = form_with(model: [:name_space1, current_record], class: "form-horizontal") do |form|
+  = form_with(model: [*ns_prefix, current_record], class: "form-horizontal") do |form|
     = render partial: "error_messages", locals: {form: form}
     = field_set_tag("このブロックはなくても良いが、あると複数まとめてアップロードできたりする") do
       / まとめてアップロードしたいとき用
@@ -30,7 +30,7 @@
       = "自分と子の名前を一気に更新"
       small=<> "削除するとその場所にアップロードフィールドがでる"
 
-  = form_with(model: [:name_space1, current_record], class: "form-horizontal") do |form|
+  = form_with(model: [*ns_prefix, current_record], class: "form-horizontal") do |form|
     = render partial: "error_messages", locals: {form: form}
 
     / タイトル変更用
@@ -67,8 +67,8 @@
         = form.submit(name: :_submit, class: "btn btn-primary")
 
   hr
-  =<> link_to("一覧", [:name_space1, current_plural_key], class: "btn btn-default")
+  =<> link_to("一覧", [*ns_prefix, current_plural_key], class: "btn btn-default")
   - if current_record.persisted?
-    =<> link_to("詳細", [:name_space1, current_record], class: "btn btn-info")
+    =<> link_to("詳細", [*ns_prefix, current_record], class: "btn btn-info")
   - if controller.respond_to_destroy? && current_record.persisted?
-    =<> link_to("削除", [:name_space1, current_record], method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn btn-danger")
+    =<> link_to("削除", [*ns_prefix, current_record], method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn btn-danger")
