--- a/app/views/type018_foo_mailer/welcome_mail.text.erb
+++ b/app/views/type018_foo_mailer/welcome_mail.text.erb
@@ -4,7 +4,7 @@
 <%= url_for([:new, :name_space1, :type018_session, type018_user: {email: @user.email}]) %>
 
 ▼ホーム
-<%= url_for([:name_space1, :type018_home]) %>
+<%= url_for([*ns_prefix, :type018_home]) %>
 
 ▼ルート
 <%= url_for(:root) %>
