--- a/app/views/name_space1/type017_articles/_show.html.slim
+++ b/app/views/name_space1/type017_articles/_show.html.slim
@@ -1,4 +1,4 @@
-script src=="//maps.googleapis.com/maps/api/js?key=AIzaSyCuRVZQBIM7XAhSvKl7nfZA-N2FhT-u1o8"
+script src=="//maps.googleapis.com/maps/api/js?key=#{AppConfig[:google_maps_api_key]}"
 
 .row
   .col-md-8
