--- a/app/views/name_space1/type017_articles/_show2.html.slim
+++ b/app/views/name_space1/type017_articles/_show2.html.slim
@@ -14,7 +14,7 @@ javascript:
 
 ruby:
   goolemaps_url_args = {
-    key: "AIzaSyCuRVZQBIM7XAhSvKl7nfZA-N2FhT-u1o8",
+    key: AppConfig[:google_maps_api_key],
     callback: "gmap_load_func",  # 読み込まれたあとに呼ぶ関数
     # libraries: ["drawing", "geometry", "places", "visualization"].join(","),
     lang: "en",            # ← 効いてないっぽい
