--- a/app/views/application/_form.html.slim
+++ b/app/views/application/_form.html.slim
@@ -1,5 +1,5 @@
 - form.object.class.columns.each do |column|
-  - next if column.name.in?(["id", "created_at", "updated_at"])
+  - next if column.name.in?(["id", "created_at", "updated_at", "position"])
   .form-group
     = form.label(column.name, class: "col-md-2 control-label")
     .col-md-10
