--- a/app/views/application/show.html.slim
+++ b/app/views/application/show.html.slim
@@ -10,6 +10,6 @@ p
     .panel-body
       =<> link_to("一覧", [*ns_prefix, current_plural_key], class: "btn btn-default")
       - if controller.respond_to?(:edit)
-        =<> link_to("編集", [:edit, :name_space1, current_record], class: "btn btn-success")
+        =<> link_to("編集", [:edit, *ns_prefix, current_record], class: "btn btn-success")
       - if controller.respond_to_destroy?
         =<> link_to("削除", [*ns_prefix, current_record], method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn btn-danger")
