--- a/app/views/name_space1/type018_homes/show.html.slim
+++ b/app/views/name_space1/type018_homes/show.html.slim
@@ -4,4 +4,4 @@
 
 ul.nav.nav-pills
   li= link_to("ログアウト", [*ns_prefix, :type018_session], method: :delete)
-  li= link_to("PWリセット", [:new, :name_space1, :type018_password_reseter])
+  li= link_to("PWリセット", [:new, *ns_prefix, :type018_password_reseter])
