--- a/app/views/type018_foo_mailer/activation_mail.text.erb
+++ b/app/views/type018_foo_mailer/activation_mail.text.erb
@@ -1,3 +1,3 @@
 下記のURLをクリックして本登録を完了させてください。
 
-<%= url_for([:new, :name_space1, :type018_user, activate_token: @type018_email_activation.activate_token]) %>
+<%= url_for([:new, *ns_prefix, :type018_user, activate_token: @type018_email_activation.activate_token]) %>
