[chore] 005 アルバム改善

--- a/app/views/name_space1/type005_articles/_form.html.slim
+++ b/app/views/name_space1/type005_articles/_form.html.slim
@@ -41,8 +41,9 @@
   = form.label("既存のファイル", class: "col-sm-2 control-label")
   .col-sm-10
     / この条件を入れないとフォームでエラーがあったときに増えていってしまう
-    - if form.object.type005_files.all?(&:persisted?)
-      - form.object.type005_files.build
+    - scope = form.object.type005_files.where({})
+    - if scope.all?(&:persisted?)
+      - scope.build
     / 要素(複数)
     - form.object.type005_files.each do |e|
       = form.fields_for(:type005_files, e) do |form|
